# cuisinio

cuisinio-frontend/: .angular-cli.json  README.md  package-lock.json  package.json
cuisinio-frontend/e2e/: app.e2e-spec.ts
cuisinio-frontend/src/: index.html
cuisinio-frontend/src/app/: app.component.ts  app.module.ts
cuisinio-frontend/src/app/recipe/: index.ts  recipe.component.html  recipe.module.ts
cuisinio-frontend/src/app/recipe/model/: recipe.ts
cuisinio-frontend/src/app/recipe/recipe-list/: recipe-list.component.html  recipe-list.component.ts
cuisinio-frontend/src/app/recipe/services/: recipe.service.ts
cuisinio-frontend/src/app/recipes/: recipes.component.html  recipes.component.ts  recipes.module.ts
cuisinio-frontend/src/app/recipes/components/new-recipe/: new-recipe.component.html  new-recipe.component.ts
cuisinio-frontend/src/app/recipes/components/recipe-list/: recipe-list.component.html  recipe-list.component.ts
cuisinio-frontend/src/app/recipes/components/recipe-view/: recipe-view.component.html  recipe-view.component.ts
cuisinio-frontend/src/app/recipes/model/: recipe.model.ts
cuisinio-frontend/src/app/recipes/services/: recipe.service.ts
cuisinio-service/: Cargo.toml
cuisinio-service/src/: main.rs  recipe.rs
cuisinio-service/src/controllers/: mod.rs  recipes.rs  workflows.rs
cuisinio-service/src/model/: graph.rs  mod.rs  recipe.rs  step.rs  workflow.rs
cuisinio-service/src/services/: mongo_client.rs
