[package]
name = "cuisinio-service"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]

[dependencies]
rocket = "0.3.14"
rocket_codegen = "0.3.14"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bson = "^0.10"
mongodb = "0.3.8"

[dependencies.rocket_contrib]
version="*"
default-features = false
features = ["json"]
